--- a/manifest.json
+++ b/manifest.json
@@ -11,21 +11,21 @@
   "categories": ["business", "services"],
   "icons": [
     {
+      "src": "IMG/favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
+    },
+    {
       "src": "IMG/maskable_icon_x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     },
     {
       "src": "maskable_icon_x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "IMG/Logo.svg",
-      "sizes": "any",
-      "type": "image/svg+xml"
+      "purpose": "maskable"
     }
   ]
 }
